# web-platform

./: README.md  pyproject.toml  run.py
src/wplt/: __init__.py  config.py  main.py  routing.py
src/wplt/auth/: api.py
src/wplt/auth/application/: endpoints.py  services.py
src/wplt/auth/domain/: models.py
src/wplt/auth/infrastructure/: repositories.py
src/wplt/user/: api.py
src/wplt/user/profile/: api.py
src/wplt/users/: api.py
tests/: conftest.py  test_auth.py
