[tool.poetry]
name = "wplt"
version = "0.1.0"
description = "Skills Assessment Web Platform"
authors = ["Valeriu Pirtac <valeriu-pirtac@gmail.com>"]
readme = "README.md"
packages = [{ include = "wplt", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12.0"
uvicorn = { extras = ["standard"], version = "0.24.0.post1" }
loguru = "0.7.2"


[tool.poetry.group.dev.dependencies]
fastapi = "0.104.1"
sqlalchemy = "2.0.29"
pydantic-core = "2.16.3"
pydantic = { extras = ["email"], version = "2.6.4" }
python-multipart = "0.0.9"


[tool.poetry.group.test.dependencies]
httpx = "0.27.0"
pytest = "7.4.4"
pytest-cov = "5.0.0"

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
